# football-script

./: CONTRIBUTING.md  README.md  SECURITY.md  clean_pycache.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
examples/: async.fs  hello.fs
raw/: compiler.txt  example-programs.txt  input-prompt-for-artifacts.txt  install-script.txt  package-config.txt  runtime-library.txt  vscode-extension.txt
src/football_script/: cli.py  stamford.py  stamford_cli.py
src/football_script/compiler/: __init__.py  astnodes.py  codegen.py  parser.py
src/football_script/compiler/grammar/: football_script.lark
src/football_script/lsp/: server.py
src/football_script/runtime/: core.py
tests/: test_smoke.py
