[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-script"
version = "0.1.0"
description = "football-script v1 — a tiny Python-first language (Lark → Python ast → CPython)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "football-script authors" }]
dependencies = [
  "lark~=1.1",
  "typer~=0.12",
  "pygls>=1.1,<2.0",
]

[project.scripts]
chelsea = "football_script.cli:app"
stamford = "football_script.stamford:app"

[tool.hatch.build.targets.wheel]
packages = ["src/football_script"]
sources = ["src"]
